# cinema-management-system

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: build.yml  ubuntu.yml  windows.yml
client/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
client/.cmake/: gtest.cmake  vcpkg.cmake
client/admin-dashboard/: CMakeLists.txt
client/admin-dashboard/resources/: .env
client/admin-dashboard/src/: core.h  main.c
client/admin-dashboard/src/generate_report/: choose_generate_report_action.c  generate_report.h  show_cinema_without_enough_ushers.c  show_monthly_booking_state.c  show_screenings_without_projectionist.c
client/admin-dashboard/src/manage_cinema/: choose_manage_cinema_action.c  delete_cinema.c  delete_hall.c  insert_cinema.c  insert_hall.c  manage_cinema.h  show_cinema.c  show_halls.c
client/admin-dashboard/src/manage_employees/: choose_manage_employees_action.c  delete_employee.c  insert_employee.c  manage_employees.h  show_employees.c
client/admin-dashboard/src/manage_projections/: assign_projectionist.c  choose_manage_projections_action.c  delete_projection.c  insert_projection.c  manage_projections.h  show_movies.c  show_projectionists.c  show_projections.c
client/admin-dashboard/src/manage_screenings/: assign_projectionist.c  choose_manage_screenings_action.c  delete_screening.c  insert_screening.c  manage_screenings.h  show_movies.c  show_projectionists.c  show_screenings.c
client/admin-dashboard/src/manage_shifts/: choose_manage_shifts_action.c  delete_shift.c  insert_shift.c  manage_shifts.h  show_shifts.c
client/admin-dashboard/src/utilities/: io.c  strto.h
client/booking-validatior/: CMakeLists.txt
client/booking-validatior/src/: main.c
client/booking-validatior/test/: CMakeLists.txt  test_client.cpp
client/booking-validator/: CMakeLists.txt
client/booking-validator/resources/: .env
client/booking-validator/src/: main.c
client/booking-validator/test/: test_client.cpp
client/cinema-management-service/: CMakeLists.txt
client/cinema-management-service/include/: booking.h  cinema-management-service.h  cinema-management.h  cms.h  employee-management.h  report.h  screenings-scheduling.h  shift-scheduling.h
client/cinema-management-service/include/cms/: booking.h  cinema_management.h  cms.h  employee-management.h  employee_management.h  projections_scheduling.h  report.h  screenings-scheduling.h  screenings_scheduling.h  shift-scheduling.h  shift_scheduling.h
client/cinema-management-service/include/domain/: employee.h  film.h  hall.h  screening.h  seat.h  weekday.h
client/cinema-management-service/src/: booking.c  cinema-management-service.c  cinema_management.c  cms-operation.h  cms-statement.h  cms.c  cms_operation.h  employee_management.c  prepared-statement.h  projections_scheduling.c  report.c  screenings_scheduling.c  shift_scheduling.c
client/cinema-management-service/src/domain/: cinema.c  film.c  screening.c  seat.c
client/cinema-management-service/src/type/: cinema-management-service.h
client/cinema-management-service/src/utilities/: db.c  db.h  dbutil.c  dbutil.h  utilities.c  utilities.h
client/cinema-management-service/test/: CMakeLists.txt  test_client.cxx
client/cinema-management-system/: CMakeLists.txt
client/cinema-management-system/include/: booking.h  cinema-management-system.h  cinema-management.h  employee-management.h  report.h  screenings-scheduling.h  shift-scheduling.h
client/cinema-management-system/include/domain/: cinema.h  employee.h  film.h  hall.h  screening.h  shift.h
client/cinema-management-system/src/: main.c
client/cinema-management-system/src/domain/: cinema.c  employee.c  film.c  hall.c  screening.c  shift.c
client/cinema-management-system/test/: CMakeLists.txt  test_client.cpp
client/cli-utilities/: CMakeLists.txt
client/cli-utilities/include/cliutils/: io.h  strto.h
client/cli-utilities/src/: dotenv.c  io.c  strto.c
client/client/: CMakeLists.txt
client/client/src/: client.c
client/client/test/: CMakeLists.txt
client/screenings-booker/: CMakeLists.txt
client/screenings-booker/resources/: .env
client/screenings-booker/src/: cancel-booking.c  cancel-booking.h  core.h  io.c  io.h  main.c  make-booking.c  make-booking.h  make_booking.h  resources.h
client/screenings-booker/src/cancel_booking/: cancel_booking.c  cancel_booking.h
client/screenings-booker/src/make_booking/: choose_cinema.c  choose_screening.c  choose_screenings.c  choose_seat.c  make_booking.h  make_payment.c
client/screenings-booker/src/utilities/: dotenv.c  dotenv.h  io.c  io.h  strto.c
client/screenings-booker/test/: CMakeLists.txt
docs/: documentazione.tex  header.tex  style.tex  title.tex
docs/chapters/: analisi_requisiti.tex  descrizione_minimondo.tex  implementazione.tex  progettazione_concettuale.tex  progettazione_fisica.tex  progettazione_logica.tex
docs/media/er_diagrams/: er-diagram_1.drawio  er-diagram_2.drawio  er-diagram_3.drawio  er-diagram_4.drawio  er-diagram_5.drawio  er-diagram_6.drawio  er-diagram_final.drawio  er-diagram_restructured.drawio
docs/media/progconc/: er-diagram_1.drawio  er-diagram_2.drawio  er-diagram_5.drawio  er-diagram_6.drawio  er-diagram_final.drawio
server/: README.md  cinemadb.mwb  cinemadb.sql  install.sh
server/cinemadb/: .gitignore  make_sql_script.py
server/cinemadb/data/: Cinema.sql  Dipendenti.sql  Film.sql  Giorni.sql  Posti.sql  Proiezioni.sql  Ruoli.sql  Sale.sql  StatiPrenotazione.sql  Stati_Prenotazione.sql  Turni.sql
server/cinemadb/events/: pulizia_prenotazioni.sql  pulizia_prenotazioni_in_attesa.sql  pulizia_proiezioni.sql  scadenza_prenotazioni.sql
server/payment-service-plugin/: CMakeLists.txt  CMakePresets.json  vcpkg.json
server/payment-service-plugin/.cmake/: gtest.cmake  vcpkg.cmake
server/payment-service-plugin/include/: payment-service-plugin.hxx  payment-service.h
server/payment-service-plugin/src/: mock.cxx
server/payment-service-plugin/test/: CMakeLists.txt  test_payment_service.cxx  test_payment_service_plugin.cxx
(+119 files in other folders)
